<resources>
    <string name="app_name">ToDoApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="no_data">No Data</string>
    <string name="add_fragment">Add</string>
    <string name="update_fragment">Update</string>
    <string name="add_button">add_button</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort By</string>
    <string name="priority_high">High</string>
    <string name="priority_low">Low</string>
    <string name="priority_medium">Medium</string>
    <string name="delete_all">Delete All</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="deadline">Deadline</string>
    <string-array name="priorities">
        <item>High Priority</item>
        <item>Medium Priority</item>
        <item>Low Priority</item>
    </string-array>
    <!--    Delete task -->
    <string name="confirm_removal">Confirm removal</string>
    <string name="are_you_sure">Are you sure delete</string>
    <string name="are_you_sure_all">"Are you sure delete All?"</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="removed">Removed!</string>
    <string name="deleted">Deleted!</string>
    <string name="undo">Undo</string>
    <!-- Update and save -->
    <string name="updated_successfully">Updated successfully!</string>
    <string name="saved_successfully">Saved successfully!</string>
    <string name="all_items_removed">All items Removed!</string>
    <!--"Please fill all fields"-->
    <string name="please_fill_all_fields">Please fill all fields</string>

    <!-- Grid view -->
    <string name="view_by">View By</string>
    <string name="grid_view">Grid</string>
    <string name="list_view">List</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="calendar_icon">Calendar icon</string>

    <!--Notification Channel-->
    <string name="notification_channel_name">Channel Name</string>
    <string name="notification_name">Notification Name</string>

    <string name="two_hours">2 hours</string>
    <string name="one_days">1 day</string>
    <string name="two_days">2 days</string>
    <string name="reminder_me">Reminder me</string>
</resources>