<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<item
    android:id="@+id/menu_search"
    android:title="@string/search"
    android:icon="@drawable/ic_search"
    app:showAsAction="ifRoom"
    app:actionViewClass="androidx.appcompat.widget.SearchView"/>

    <group android:checkableBehavior="none">
        <item android:id="@+id/menu_sortBy"
            android:title="@string/sort_by">
            <menu>
                <item android:id="@+id/menu_priority_high"
                    android:title="@string/priority_high"
                    android:icon="@drawable/ic_high" />

                <item android:id="@+id/menu_priority_low"
                    android:title="@string/priority_low"
                    android:icon="@drawable/ic_low" />

                <item android:id="@+id/menu_datetime"
                    android:title="@string/date"
                    android:icon="@drawable/ic_calendar_black"
                    />
            </menu>
        </item>
    </group>
    <group android:checkableBehavior="none">
        <item android:id="@+id/menu_viewBy"
            android:title="@string/view_by">
            <menu>
                <item android:id="@+id/menu_gridView"
                    android:title="@string/grid_view"
                    android:icon="@drawable/ic_view_grid"/>

                <item android:id="@+id/menu_listView"
                    android:title="@string/list_view"
                    android:icon="@drawable/ic_view_list"/>
            </menu>
        </item>
    </group>
    <item
        android:id="@+id/menu_delete_all"
        android:title="@string/delete_all"
        app:showAsAction="never"/>
</menu>