<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".fragments.update.UpdateFragment">

    <EditText
        android:id="@+id/current_title_et"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="textCapSentences"
        android:hint="@string/title"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:background="@drawable/custom_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <Spinner
        android:id="@+id/current_priorities_spinner"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:entries="@array/priorities"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:background="@drawable/custom_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_title_et" />

    <TextView
        android:id="@+id/current_text_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/date"
        android:textSize="18sp"
        android:background="@drawable/item_background"
        android:textColor="@color/darkGray"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/current_text_time"
        app:layout_constraintTop_toBottomOf="@id/current_priorities_spinner"
        app:drawableEndCompat="@drawable/ic_date"/>
    <TextView
        android:id="@+id/current_text_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/time"
        android:textSize="18sp"
        android:textColor="@color/darkGray"
        android:background="@drawable/item_background"
        android:padding="8dp"
        app:layout_constraintStart_toEndOf="@id/current_text_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_priorities_spinner"
        app:drawableEndCompat="@drawable/ic_time" />

    <TextView
        android:id="@+id/tv_reminders"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="3dp"
        app:layout_constraintTop_toBottomOf="@id/current_text_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:text="@string/reminder_me"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_switches"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/tv_reminders"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/current_sw_twoDays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            app:switchPadding="4dp"
            android:text="@string/two_days"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/current_sw_oneDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            app:switchPadding="4dp"
            android:text="@string/one_days"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/current_sw_twoHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:switchPadding="4dp"
            android:text="@string/two_hours"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <EditText
        android:id="@+id/current_description_et"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/description"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:inputType="textMultiLine|textCapSentences"
        android:gravity="top|start"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingTop="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_switches"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>